# CoreGenPortal

./: CMakeLists.txt  README.md
sampletestcases/: IFTestCase.yaml
sampletestcases/GUITest/: README  test_tutortial.py
src/: CMakeLists.txt
src/CoreGenPortal/: CMakeLists.txt  PortalConsts.h  PortalMain.cpp  PortalMainFrame.cpp  PortalMainFrame.h  PortalNewProjWin.cpp  PortalNewProjWin.h  PortalSCPrefWin.cpp  PortalSCPrefWin.h  PortalUserPrefWin.cpp  PortalUserPrefWin.h  PortalVerifPrefWin.cpp  PortalVerifPrefWin.h  PortalVersion.h
src/CoreGenPortal/PortalCore/: CMakeLists.txt  CoreCacheInfoWin.cpp  CoreCacheInfoWin.h  CoreCommInfoWin.cpp  CoreCommInfoWin.h  CoreConsts.h  CoreCoreInfoWin.cpp  CoreCoreInfoWin.h  CoreDataPathInfoWin.cpp  CoreDataPathInfoWin.h  CoreDepChildWin.cpp  CoreDepChildWin.h  CoreDrawInstFormat.cpp  CoreDrawInstFormat.h  CoreEncodingInfoWin.cpp  CoreEncodingInfoWin.h  CoreErrorDiag.cpp  CoreErrorDiag.h  CoreExtInfoWin.cpp  CoreExtInfoWin.h  CoreISAInfoWin.cpp  CoreISAInfoWin.h  CoreInfoWin.cpp  CoreInfoWin.h  CoreInstFormatInfoWin.cpp  CoreInstFormatInfoWin.h  CoreInstInfoWin.cpp  CoreInstInfoWin.h  CoreMCtrlInfoWin.cpp  CoreMCtrlInfoWin.h  CorePInstInfoWin.cpp  CorePInstInfoWin.h  CorePluginBrowser.cpp  CorePluginBrowser.h  CorePluginInfoWin.cpp  CorePluginInfoWin.h  CoreRegClassInfoWin.cpp  CoreRegClassInfoWin.h  CoreRegInfoWin.cpp  CoreRegInfoWin.h  (+26 more)
src/CoreGenPortal/PortalViz/: CMakeLists.txt  PortalViz.cpp  PortalViz.h
src/CoreGenPortal/imgs/: CMakeLists.txt
test/: CMakeLists.txt  IFTestCase.yaml
test/GUITest/: CMakeLists.txt  README  test_tutortial.py
